[package]
name = "jrn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
requestty = { version = "0.5.0", features = ["macro"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
